--- a/Flaintartist/Base.lproj/Main.storyboard
+++ b/Flaintartist/Base.lproj/Main.storyboard
@@ -2138,6 +2138,84 @@
             </objects>
             <point key="canvasLocation" x="5332" y="139"/>
         </scene>
+        <!--Report-->
+        <scene sceneID="t0E-cV-W9g">
+            <objects>
+                <viewController id="bUQ-k0-cFo" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Skc-BF-Iat"/>
+                        <viewControllerLayoutGuide type="bottom" id="R5X-XL-oP3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="OM4-ea-xQM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="La7-HS-mdS">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="sL9-vr-QII">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sL9-vr-QII" id="jIp-gY-VoW">
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dTb-oB-oEn">
+                                                    <rect key="frame" x="8" y="11" width="312" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.12637259066104889" green="0.12639245390892029" blue="0.12636536359786987" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="dTb-oB-oEn" firstAttribute="centerY" secondItem="jIp-gY-VoW" secondAttribute="centerY" id="QCd-N6-Hd5"/>
+                                                <constraint firstItem="dTb-oB-oEn" firstAttribute="top" secondItem="jIp-gY-VoW" secondAttribute="topMargin" constant="3" id="t4z-Tq-xHL"/>
+                                                <constraint firstItem="dTb-oB-oEn" firstAttribute="leading" secondItem="jIp-gY-VoW" secondAttribute="leadingMargin" id="tPk-iZ-HJ4"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="dTb-oB-oEn" secondAttribute="trailing" constant="14" id="tUA-0d-WB6"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <sections/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="R5X-XL-oP3" firstAttribute="top" secondItem="La7-HS-mdS" secondAttribute="bottom" id="1ab-la-vYA"/>
+                            <constraint firstItem="La7-HS-mdS" firstAttribute="leading" secondItem="OM4-ea-xQM" secondAttribute="leading" id="XHJ-y3-Rc3"/>
+                            <constraint firstItem="La7-HS-mdS" firstAttribute="top" secondItem="OM4-ea-xQM" secondAttribute="top" id="fW5-s1-4ls"/>
+                            <constraint firstAttribute="trailing" secondItem="La7-HS-mdS" secondAttribute="trailing" id="in2-3E-K2W"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Report" id="UGc-JJ-DTD">
+                        <barButtonItem key="rightBarButtonItem" title="Cancel" id="Ucx-v4-ZDA">
+                            <color key="tintColor" red="0.12637259066104889" green="0.12639245390892029" blue="0.12636536359786987" alpha="1" colorSpace="calibratedRGB"/>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="V4Q-am-2Uz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3360.8000000000002" y="-586.05697151424295"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="6TJ-78-RfP">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="v28-s4-pGk" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aCK-fP-i2y">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="bUQ-k0-cFo" kind="relationship" relationship="rootViewController" id="VAB-8S-Inu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gO6-Dm-bCU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2421.5999999999999" y="-586.05697151424295"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Capture Filled-25" width="25" height="25"/>
