--- a/Flaintartist/Base.lproj/Main.storyboard
+++ b/Flaintartist/Base.lproj/Main.storyboard
@@ -1404,7 +1404,25 @@
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zhe-Dz-eWv">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="172"/>
+                                        <subviews>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="www.facebook.com" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ABd-aS-HKS">
+                                                <rect key="frame" x="88" y="105" width="268" height="32"/>
+                                                <color key="tintColor" red="0.19376453757286072" green="0.50850099325180054" blue="0.85232251882553101" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="32" id="Wec-kb-s8T"/>
+                                                </constraints>
+                                                <color key="textColor" red="0.19376453757286072" green="0.50850099325180054" blue="0.85232251882553101" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                                <dataDetectorType key="dataDetectorTypes" link="YES"/>
+                                            </textView>
+                                        </subviews>
                                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="ABd-aS-HKS" secondAttribute="trailing" constant="19" id="9t9-96-Odt"/>
+                                            <constraint firstItem="ABd-aS-HKS" firstAttribute="leading" secondItem="Zhe-Dz-eWv" secondAttribute="leading" constant="88" id="XMB-Oj-GqF"/>
+                                            <constraint firstAttribute="bottom" secondItem="ABd-aS-HKS" secondAttribute="bottom" constant="35" id="rqW-t3-NVa"/>
+                                        </constraints>
                                     </view>
                                     <view multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hKe-2p-nYQ" customClass="iCarousel">
                                         <rect key="frame" x="0.0" y="171" width="375" height="437"/>
@@ -1424,7 +1442,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="6x4-ci-HIU">
-                                        <rect key="frame" x="94" y="96" width="80.5" height="16"/>
+                                        <rect key="frame" x="94" y="92" width="80.5" height="16"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artworks" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eh5-WI-Rbr">
                                                 <rect key="frame" x="0.0" y="0.0" width="56.5" height="16"/>
@@ -1505,7 +1523,7 @@
                                     <constraint firstItem="6zu-kz-65Z" firstAttribute="top" secondItem="Zhe-Dz-eWv" secondAttribute="bottom" constant="8" id="Qk8-ww-mmA"/>
                                     <constraint firstItem="wiX-ci-iCq" firstAttribute="leading" secondItem="6x4-ci-HIU" secondAttribute="leading" constant="-1" id="Ryu-j0-iP6"/>
                                     <constraint firstItem="6Fd-us-f1b" firstAttribute="leading" secondItem="hBb-Rc-M9Q" secondAttribute="leading" constant="16" id="Uvf-Dj-f7w"/>
-                                    <constraint firstItem="hKe-2p-nYQ" firstAttribute="top" secondItem="6x4-ci-HIU" secondAttribute="bottom" constant="59" id="YLq-q4-yOa"/>
+                                    <constraint firstItem="hKe-2p-nYQ" firstAttribute="top" secondItem="6x4-ci-HIU" secondAttribute="bottom" constant="63" id="YLq-q4-yOa"/>
                                     <constraint firstAttribute="trailing" secondItem="TaD-dH-Hh6" secondAttribute="trailing" id="YiQ-1b-LDh"/>
                                     <constraint firstItem="hKe-2p-nYQ" firstAttribute="top" secondItem="Zhe-Dz-eWv" secondAttribute="bottom" constant="-1" id="Ytm-nW-oWf"/>
                                     <constraint firstItem="wiX-ci-iCq" firstAttribute="leading" secondItem="6Fd-us-f1b" secondAttribute="trailing" constant="7" id="deN-jD-DgW"/>
@@ -1549,6 +1567,7 @@
                         <outlet property="profileView" destination="twX-pb-b8P" id="JpU-oE-XDB"/>
                         <outlet property="scrollView" destination="hBb-Rc-M9Q" id="fup-ic-faW"/>
                         <outlet property="tapOnCameraStackView" destination="fen-lq-yvm" id="KQX-cS-Cbh"/>
+                        <outlet property="websiteTextView" destination="ABd-aS-HKS" id="ceK-sr-4UE"/>
                         <segue destination="fzc-Hd-YAr" kind="show" identifier="SettingsVC" id="1QW-C7-yYJ"/>
                         <segue destination="EVe-GM-6zn" kind="show" identifier="ArtRoomVC" id="cjM-yZ-yGq"/>
                     </connections>
